--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,15 @@
 body {
     background-image: linear-gradient(#A332E4, #D6552C);
-    display: inline-block;
+    margin: 0;
 }
 
-.bar {
-    height: auto;
-    width: 30vw;
-    background-color: white;
+#bar {
+    position: absolute;
+    height: 100vh;
+    width: 32.5vw;
+    background-color: #FF966E;
+    opacity: 0.4;
+    z-index: -1;
 }
 
 .grid-container {
@@ -21,8 +24,9 @@ body {
 }
 
 .bubble1 {
-    height: 400px;
-    width: 400px;
+    display: inline-flex;
+    height: 25vw;
+    width: 25vw;
     border-radius: 50%;
     background-color: #FF966E;
     margin-top: 170px;
@@ -30,19 +34,23 @@ body {
 }
 
 .bubble2 {
-    height: 200px;
-    width: 200px;
+    display: inline-flex;
+    height: 12vw;
+    width: 12vw;
     border-radius: 50%;
     background-color: #FF966E;
-    margin-top: 170px;
-    margin-left: 20vw;
+    opacity: 0.4;
+    margin-left: 7vw;
+    margin-bottom: 25vh;
 }
 
 .bubble3 {
-    height: 400px;
-    width: 400px;
+    display: inline-flex;
+    height: 7vw;
+    width: 7vw;
     border-radius: 50%;
     background-color: #FF966E;
-    margin-top: 170px;
-    margin-left: 20vw;
+    opacity: 0.2;
+    margin-left: 2vw;
+    margin-bottom: 20vh;
 }
