--- a/views/index.slim
+++ b/views/index.slim
@@ -10,5 +10,12 @@ html lang="en"
     body
         div id="bar"
         div class="bubble1"
+            h1 class="title LowerTitle" 18
+            h1 class="title" Ar
         div class="bubble2"
         div class="bubble3"
+        h3 class="ingress" Argon18 - A tiny webserver
+        h3 class="ingress ingress2" for demo projects
+        div id="buttonHolder"
+            input class="button" type="button" value="Github" onclick="window.location.href='https://github.com/vincent-uden/argon18'"
+            input class="button" type="button" value="RubyGems" onclick="window.location.href='https://rubygems.org/'"
