--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,15 @@
 body {
     background-image: linear-gradient(#A332E4, #D6552C);
     margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 #bar {
-    position: absolute;
+    position: fixed;
     height: 100vh;
     width: 32.5vw;
     background-color: #FF966E;
@@ -68,7 +73,7 @@ body {
     background-color: #FF966E;
     opacity: 0.4;
     margin-left: 7vw;
-    margin-top: 7vw;
+    margin-top: 2vw;
 }
 
 .bubble3 {
@@ -80,7 +85,17 @@ body {
     background-color: #FF966E;
     opacity: 0.2;
     margin-left: 20vw;
-    margin-top: 15vw;
+    margin-top: 10vw;
+}
+
+.bubbleRight {
+    margin-left: 65vw;
+}
+
+.bubbleLeft {
+    margin-top: 4vw;
+    display: inline-block;
+    position: absolute;
 }
 
 .button {
@@ -115,4 +130,62 @@ body {
     width: 17vw;
     margin-left: 15vw;
     margin-top: 25vw;
+}
+
+.textBg {
+    background-color: white;
+    width: 100vw;
+    height: auto;
+    margin-top: 20vw;
+    padding-bottom: 3vw;
+}
+
+.textContainer {
+    width: 40vw;
+    margin: auto;
+}
+
+.header {
+    color: #FF966E;
+    font-size: 3vw;
+    font-family: 'Source Code Pro', monospace;
+    padding-top: 3vw;   
+}
+
+.text {
+    color: #FF966E;
+    font-size: 1.5vw;
+    font-family: 'Source Code Pro', monospace;
+    font-weight: bold;
+}
+
+.exampleBox {
+    background-color: #ffffff4f;
+    margin-left: 20vw;
+    width: 45vw;
+    height: 15vw;
+    margin-top: 10vw;
+}
+
+.whiteHeader {
+    color: white;
+    margin-left: 5vw;
+    font-size: 2vw;
+}
+
+.list {
+    margin-left: 4vw;
+    color: white;
+    font-family: 'Source Code Pro', monospace;
+    font-weight: bold;
+    font-size: 1vw;
+}
+
+.listItem {
+    padding: 0.3vw;
+}
+
+.textBgSpace {
+    margin-top: 10vw;
+
 }
