--- a/views/index.slim
+++ b/views/index.slim
@@ -3,6 +3,7 @@ html lang="en"
         meta charset="UTF-8"/
         meta name="viewport" content="width=device-width, initial-scale=1.0"/
         meta http-equiv="X-UA-Compatible" content="ie=edge"/
+        link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"
         link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200&display=swap" rel="stylesheet"
         link rel="icon" type="image/x-icon" href="./public/misc/Ellipse 1.ico"
         link rel="stylesheet" href="style.css"/
@@ -33,9 +34,27 @@ html lang="en"
                 li class="listItem" Creating webpages using Slim
                 li class="listItem" Arbitrary Ruby code execution through Slim
                 li class="listItem" Serving of static files (images, javascript, etc.)
-        div class="textBg" class="textBgSpace"
+        div class="textBg textBgSpace"
             div class="textContainer" 
                 h1 class="header" How to use?
                 p class="text" An argon project is expected to to have to folders, public and views. Public will contain the static files such as the websites images, javascript files, etc. and views will contain the Slim files. An example project could look like this.
-            
-         
+        div class="bubbleLeft"
+            div class="bubble2"
+            div class="bubble3"
+        div class="exampleBox" id="projectStruc"
+            p class="text indent1 whiteText" +-- project
+            p class="text indent2 whiteText" +-- public
+            p class="text indent3 whiteText" +-- my_pic.png
+            p class="text indent3 whiteText" +-- js
+            p class="text indent4 whiteText" +-- my_js.js
+            p class="text indent2 whiteText" +-- views
+            p class="text indent3 whiteText" +-- index.slim
+            p class="text indent3 whiteText" +-- others.slim
+        div class="textBg textBgSpace"
+            div class="textContainer"
+                p class="text" id="fixTextDiv2" Then run the argon18 gem executable in the project folder which will start a web server running on port 9292. Any url without a file extension will be interpreted as a request for a web page. For example localhost:9292/other would correspond to the file project/views/other.slim. There's also a special case for localhost:9292/ which will look for projct/views/index.slim. Any url with a file extension will be searched for in public. As an example localhost:9292/imgs/my_pic.png would correspond to the file project/public/imgs/my_pic.png.
+        div class="textBg textBgSpace"
+            div class="textContainer" id="widerText"
+                h1 class="header" Check out the latest news on Github!
+        input class="buttonRound" type="button"
+            i class="material-icons" keyboard_arrow_up
