--- a/public/style.css
+++ b/public/style.css
@@ -187,7 +187,6 @@ body {
 
 .textBgSpace {
     margin-top: 10vw;
-
 }
 
 #projectStruc {
@@ -232,5 +231,34 @@ body {
 
 #widerText {
     width: 70vw;
+    margin-top: 20vw;
+    padding-left: 3vw;
 }
 
+#lessPadding {
+    padding-bottom: 1vw;
+}
+
+.buttonRound {
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: none;
+    border: none;
+    width: 6vw;
+    height: 6vw;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 8vw;
+}
+
+.material-icons {
+    font-size: 5vw;
+    color: #D6552C;
+    margin-left: 0.5vw;
+    margin-top: 0.5vw;
+}
+
+.marginAuto {
+    margin-left: 35vw;
+    padding: 2vw;
+}
