--- a/views/index.slim
+++ b/views/index.slim
@@ -53,8 +53,13 @@ html lang="en"
         div class="textBg textBgSpace"
             div class="textContainer"
                 p class="text" id="fixTextDiv2" Then run the argon18 gem executable in the project folder which will start a web server running on port 9292. Any url without a file extension will be interpreted as a request for a web page. For example localhost:9292/other would correspond to the file project/views/other.slim. There's also a special case for localhost:9292/ which will look for projct/views/index.slim. Any url with a file extension will be searched for in public. As an example localhost:9292/imgs/my_pic.png would correspond to the file project/public/imgs/my_pic.png.
-        div class="textBg textBgSpace"
+        div class="bubbleRight"
+            div class="bubble3"  
+            div class="bubble2"
+        div class="textBg textBgSpace" id="lessPadding"
             div class="textContainer" id="widerText"
                 h1 class="header" Check out the latest news on Github!
-        input class="buttonRound" type="button"
+        div class="buttonRound"
             i class="material-icons" keyboard_arrow_up
+        
+        p class="text whiteText marginAuto" github.com/Frazzot/argon18-web
