--- a/views/index.slim
+++ b/views/index.slim
@@ -58,8 +58,9 @@ html lang="en"
             div class="bubble2"
         div class="textBg textBgSpace" id="lessPadding"
             div class="textContainer" id="widerText"
-                h1 class="header" Check out the latest news on Github!
+                h1 class="header" id="smallerTitle" Check out the latest news on Github!
         div class="buttonRound"
             i class="material-icons" keyboard_arrow_up
         
         p class="text whiteText marginAuto" github.com/Frazzot/argon18-web
+        
