--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,16 @@
+body::-webkit-scrollbar {
+  width: 11px;
+}
+
+body::-webkit-scrollbar-track {
+  background-image: linear-gradient(#A332E4, #D6552C);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 6px;
+}
+
 body {
     background-image: linear-gradient(#A332E4, #D6552C);
     margin: 0;
@@ -6,6 +19,7 @@ body {
     height: 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
+
 }
 
 #bar {
