--- a/views/index.slim
+++ b/views/index.slim
@@ -4,8 +4,8 @@ html lang="en"
         meta name="viewport" content="width=device-width, initial-scale=1.0"/
         meta http-equiv="X-UA-Compatible" content="ie=edge"/
         link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"
-        link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200&display=swap" rel="stylesheet"
-        link rel="icon" type="image/x-icon" href="./public/misc/Ellipse 1.ico"
+        link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200&display=swap" rel="stylesheet"        
+        link rel="icon" href="18Ar.png" type="image/18Ar.png" 
         link rel="stylesheet" href="style.css"/
         title Argon18 | Ruby Gem
     body
