--- a/public/style.css
+++ b/public/style.css
@@ -261,20 +261,19 @@ body {
     font-size: 2.5vw;
 }
 
-.buttonRound {
+#buttonRound {
     background-color: white;
     border-radius: 50%;
     box-shadow: none;
     border: none;
     width: 6vw;
     height: 6vw;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 46vw;
     margin-top: 8vw;
     transition: 0.4s;
 }
 
-.buttonRound:hover {
+#buttonRound:hover {
     width: 6.5vw;
     height: 6.5vw;
 }
@@ -282,15 +281,14 @@ body {
 .material-icons {
     font-size: 5vw;
     color: #D6552C;
-    margin-left: 0.5vw;
-    margin-top: 0.5vw;
+    margin-left: 0.15vw;
+    margin-top: 0.15vw;
     transition: 0.3s
 }
 
 .material-icons:hover {
-    font-size: 6vw;
-    margin-left: 0.3vw;
-    margin-top: 0.3vw;
+    margin-left: 0.15vw;
+    margin-top: 0.15vw;
 }
 
 .marginAuto {
