--- a/views/index.slim
+++ b/views/index.slim
@@ -7,6 +7,7 @@ html lang="en"
         link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200&display=swap" rel="stylesheet"        
         link rel="icon" href="18Ar.png" type="image/18Ar.png" 
         link rel="stylesheet" href="style.css"/
+        script src="main.js"
         title Argon18 | Ruby Gem
     body
         div id="bar"
@@ -59,7 +60,7 @@ html lang="en"
         div class="textBg textBgSpace" id="lessPadding"
             div class="textContainer" id="widerText"
                 h1 class="header" id="smallerTitle" Check out the latest news on Github!
-        div class="buttonRound"
+        button onclick="topFunction()" id="buttonRound"
             i class="material-icons" keyboard_arrow_up
         
         p class="text whiteText marginAuto" github.com/Frazzot/argon18-web
