--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body::-webkit-scrollbar {
   width: 11px;
 }
@@ -276,6 +280,7 @@ body {
 #buttonRound:hover {
     width: 6.5vw;
     height: 6.5vw;
+    margin-left: 45.5vw;
 }
 
 .material-icons {
