Added files and started to work on parallax

--- a/views/index.slim
+++ b/views/index.slim
@@ -12,9 +12,9 @@ html lang="en"
         div class="bubble1"
             h1 class="title LowerTitle" 18
             h1 class="title" Ar
-        div class="bubbleLeft"
-            div class="bubble2"
-            div class="bubble3"
+        div class="bubbleLeft" id="scene"
+            div data-depth="0.2" class="bubble2"
+            div data-depth="0.6" class="bubble3"
         h3 class="ingress" Argon18 - A tiny webserver
         h3 class="ingress ingress2" for demo projects
         div id="buttonHolder"
@@ -63,4 +63,5 @@ html lang="en"
             i class="material-icons" keyboard_arrow_up
         
         p class="text whiteText marginAuto" github.com/Frazzot/argon18-web
-        
+        script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"
+        script src="/js/parallax.js"
